--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -24,7 +24,7 @@
 		margin: 0 8px;
 		min-height: 30px;
 		position: relative;
-		font-size: 1.5rem;
+		font-size: 1.4rem;
 		font-weight: 300;
 
 		@include modifier("separate") {
@@ -83,7 +83,7 @@
 	}
 
 	@include element("navbar-user-name") {
-		margin-left: 8px;
+		margin-left: 4px;
 		font-size: 1.4rem;
 		font-weight: 400;
 	}
@@ -146,8 +146,10 @@
 			&:hover {
 				background-color: #fafafa;
 			}
+		}
 
-			
+		@include modifier("separate") {
+			border-top: 1px solid rgba(0, 0, 0, .1);
 		}
 	}
 
@@ -173,6 +175,10 @@
 
 		&:hover {
 			color: rgba(255, 255, 255, 0.7);
+		}
+
+		&:nth-child(1) {
+			margin-left: 3px;
 		}
 	}
 
@@ -231,14 +237,15 @@
 	// Begin: Header Notification
 	@include element("notification") {
 		display: none;
+		border-radius: 2px;
 		position: absolute;
 		top: 100%;
 		right: 0;
 		margin-top: 20px;
 		background-color: var(--white-color);
 		width: 404px;
-		border: 1px solid #d3d3d3;
-		transform-origin: calc(100% - 20px) top;
+		box-shadow: 0 0 8px rgba(0, 0, 0, .2);
+		transform-origin: calc(100% - 25px) top;
 		animation: headerNotificationShow ease-in 0.2s;
 		will-change: opacity, transform;
 		z-index: 1;
@@ -346,6 +353,11 @@
 
 	@include element("logo") {
 		width: 200px;
+	}
+
+	@include element("logo-link") {
+		color: transparent;
+		text-decoration: none;
 	}
 
 	@include element("logo-img") {
