--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,6 +44,20 @@ html {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.grid__column-2 {
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 16.6667%;
+}
+
+.grid__column-10 {
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 83.3333%;
 }
 
 @-webkit-keyframes fadeIn {
@@ -1093,4 +1107,64 @@ html {
           align-items: center;
   height: var(--header-with-search-height);
   margin: 0 8px;
+}
+
+.homepage {
+  background-color: #f5f5f5;
+}
+
+.homepage .category {
+  border-radius: 2px;
+  background-color: var(--white-color);
+}
+
+.homepage .category__heading {
+  color: var(--text-color);
+  font-size: 1.6rem;
+  padding: 16px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.homepage .category__heading-icon {
+  font-size: 1.4rem;
+  margin-right: 4px;
+}
+
+.homepage .category-list {
+  padding-left: 0;
+  padding-bottom: 8px;
+  list-style: none;
+  margin-left: 12px;
+}
+
+.homepage .category-list-item__link {
+  position: relative;
+  right: 0;
+  display: block;
+  font-size: 1.4rem;
+  color: var(--text-color);
+  text-decoration: none;
+  padding: 4px 22px;
+  -webkit-transition: right linear .1s;
+  transition: right linear .1s;
+}
+
+.homepage .category-list-item__link:hover {
+  right: -4px;
+  color: var(--primary-color);
+}
+
+.homepage .category-list-item--active .category-list-item__link {
+  color: var(--primary-color);
+}
+
+.homepage .category-list-item--active .category-list-item__link::before {
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  content: '';
+  border: 5px solid;
+  border-color: transparent transparent transparent var(--primary-color);
 }
