--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -40,6 +40,8 @@ html {
 	box-sizing: border-box;
 }
 
+
+// responsive
 .grid {
 	width: 1200px;
 	max-width: 100%;
@@ -52,6 +54,20 @@ html {
 	@include element("row") {
 		display: flex;
 		flex-wrap: wrap;
+		margin-left: -15px;
+		margin-right: -15px;
+	}
+
+	@include element("column-2") {
+		padding-left: 15px;
+		padding-right: 15px;
+		width: 16.6667%;
+	}
+	
+	@include element("column-10") {
+		padding-left: 15px;
+		padding-right: 15px;
+		width: 83.3333%;
 	}
 }
 
