--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -850,5 +850,70 @@
 	height: var(--header-with-search-height);
 	margin: 0 8px;
 }
-
 // End: Header with search
+
+
+// Begin: Homepage
+.homepage {
+	background-color: #f5f5f5;
+
+	.category {
+		border-radius: 2px;
+		background-color: var(--white-color);
+
+		@include element("heading") {
+			color: var(--text-color);
+			font-size: 1.6rem;
+			padding: 16px;
+			border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+		}
+
+		@include element("heading-icon") {
+			font-size: 1.4rem;
+			margin-right: 4px;
+		}
+	}
+
+	.category-list {
+		padding-left: 0;
+		padding-bottom: 8px;
+		list-style: none;
+		margin-left: 12px;
+	}
+
+	.category-list-item {
+
+		@include element("link") {
+			position: relative;
+			right: 0;
+			display: block;
+			font-size: 1.4rem;
+			color: var(--text-color);
+			text-decoration: none;
+			padding: 4px 22px;
+			transition: right linear .1s;
+
+			&:hover {
+				right: -4px;
+				color: var(--primary-color);
+			}
+		}
+
+		@include modifier("active") {
+			.category-list-item__link {
+				color: var(--primary-color);
+
+				&::before {
+					position: absolute;
+					top: 50%;
+					left: 5px;
+					transform: translateY(-50%);
+					content: '';
+					border: 5px solid;
+					border-color: transparent transparent transparent var(--primary-color);
+				}
+			}
+		}
+	}
+}
+// End: Homepage
