--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -134,8 +134,8 @@ html {
 	text-decoration: none;
 	border: none;
 	border-radius: 2px;
-	background-color: transparent;
-	font-size: 1.5rem;
+	background-color: var(--white-color);
+	font-size: 1.4rem;
 	padding: 0 12px;
 	outline: none;
 	color: var(--text-color);
@@ -164,5 +164,68 @@ html {
 	&.btn--with-icon {
 		display: flex;
 		align-items: center;
+	}
+}
+
+// .Select input
+.select-input {
+	cursor: pointer;
+	height: 34px;
+	padding: 0 12px;
+	border-radius: 2px;
+	background-color: var(--white-color);
+	min-width: 200px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: relative;
+
+	&:hover {
+		.select-input__list {
+			display: block;
+		}
+	}
+
+	@include element("label") {
+		font-size: 1.4rem;
+	}
+
+	@include element("icon") {
+		color: #4a4a4a;
+		font-size: 1.2rem;
+	}
+
+	@include element("list") {
+		display: none;
+		position: absolute;
+		top: 91%;
+		left: 0;
+		right: 0;
+		list-style: none;
+		padding: 8px 0;
+		border-radius: 2px;
+		background-color: var(--white-color);
+
+		&::before {
+			content: "";
+			display: block;
+			width: 100%;
+			height: 10px;
+			position: absolute;
+			top: -11px;
+			left: 0;
+		}
+	}
+
+	@include element("link") {
+		color: var(--text-color);
+		font-size: 1.4rem;
+		padding: 8px 16px;
+		display: block;
+		text-decoration: none;
+
+		&:hover {
+			color: var(--primary-color);
+		}
 	}
 }
