--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -468,6 +468,7 @@
 		box-shadow: 0 0 8px rgba(0, 0, 0, .2);
 		padding: 0;
 		display: none;
+		z-index: 1;
 
 		&::after {
 			content: "";
@@ -855,6 +856,7 @@
 
 // Begin: Homepage
 .homepage {
+	padding-top: 36px;
 	background-color: #f5f5f5;
 
 	.category {
@@ -863,6 +865,7 @@
 
 		@include element("heading") {
 			color: var(--text-color);
+			margin: 0;
 			font-size: 1.6rem;
 			padding: 16px;
 			border-bottom: 1px solid rgba(0, 0, 0, 0.1);
@@ -878,7 +881,7 @@
 		padding-left: 0;
 		padding-bottom: 8px;
 		list-style: none;
-		margin-left: 12px;
+		margin: 12px 0 12px 12px;
 	}
 
 	.category-list-item {
@@ -890,7 +893,7 @@
 			font-size: 1.4rem;
 			color: var(--text-color);
 			text-decoration: none;
-			padding: 4px 22px;
+			padding: 8px 32px 8px 22px;
 			transition: right linear .1s;
 
 			&:hover {
@@ -911,6 +914,75 @@
 					content: '';
 					border: 5px solid;
 					border-color: transparent transparent transparent var(--primary-color);
+				}
+			}
+		}
+	}
+
+	.filter {
+		position: relative;
+		border-radius: 2px;
+		display: flex;
+		align-items: center;
+		background-color: rgba(0, 0, 0, .03);
+		padding: 12px 22px;
+
+		@include element("label") {
+			color: #555;
+			font-size: 1.4rem;
+			margin-right: 12px;
+		}
+
+		@include element("btn") {
+			min-width: 120px;
+			margin-right: 12px;
+		}
+	}
+
+	.filter-pagination {
+		display: flex;
+		align-items: center;
+		margin-left: auto;
+
+		@include element("wrap") {
+			font-size: 1.4rem;
+			color: var(--text-color);
+			margin-right: 22px;
+		}
+
+		@include element("wrap-current-page") {
+			color: var(--primary-color);
+		}
+
+		@include element("control") {
+			border-radius: 2px;
+			overflow: hidden;
+			display: flex;
+			width: 68px;
+			height: 34px;
+		}
+
+		@include element("control-btn") {
+			display: flex;
+			flex: 1;
+			background-color: var(--white-color);
+			text-decoration: none;
+
+			&:first-child {
+				border: 1px solid #eee;
+			}
+
+			i {
+				color: #4a4a4a;
+				margin: auto;
+			}
+
+			@include modifier("disable") {
+				background-color: #f9f9f9;
+				cursor: default;
+
+				i {
+					color: #ccc;
 				}
 			}
 		}
