--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,19 +44,25 @@ html {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-left: -15px;
-  margin-right: -15px;
+  margin-left: -5px;
+  margin-right: -5px;
 }
 
 .grid__column-2 {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 5px;
+  padding-right: 5px;
   width: 16.6667%;
 }
 
+.grid__column-2-4 {
+  padding-left: 5px;
+  padding-right: 5px;
+  width: 20%;
+}
+
 .grid__column-10 {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 5px;
+  padding-right: 5px;
   width: 83.3333%;
 }
 
@@ -1319,4 +1325,29 @@ html {
 
 .homepage .filter-pagination__control-btn--disable i {
   color: #ccc;
+}
+
+.homepage .product-item {
+  margin-top: 10px;
+  background-color: var(--white-color);
+}
+
+.homepage .product-item__img {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding-top: 100%;
+}
+
+.homepage .product-item__name {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  text-overflow: ellipsis;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.8rem;
+  height: 3.6rem;
+  overflow: hidden;
+  margin: 10px;
 }
