--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -54,19 +54,25 @@ html {
 	@include element("row") {
 		display: flex;
 		flex-wrap: wrap;
-		margin-left: -15px;
-		margin-right: -15px;
+		margin-left: -5px;
+		margin-right: -5px;
 	}
 
 	@include element("column-2") {
-		padding-left: 15px;
-		padding-right: 15px;
+		padding-left: 5px;
+		padding-right: 5px;
 		width: 16.6667%;
+	}
+
+	@include element("column-2-4") {
+		padding-left: 5px;
+		padding-right: 5px;
+		width: 20%;
 	}
 	
 	@include element("column-10") {
-		padding-left: 15px;
-		padding-right: 15px;
+		padding-left: 5px;
+		padding-right: 5px;
 		width: 83.3333%;
 	}
 }
