--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -9,6 +9,7 @@
 	--black-color: #000;
 	--text-color: #333;
 	--border-color: #dbdbdb;
+	--star-gold-color: #FFCE3D;
 	--header-height: 120px;
 	--navbar-height: 43px;
 	--header-with-search-height: calc(
