--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -993,6 +993,7 @@
 	}
 
 	.product-item {
+		position: relative;
 		margin-top: 10px;
 		background-color: var(--white-color);
 
@@ -1094,6 +1095,41 @@
 			color: #595959;
 			font-size: 1.2rem;
 			font-weight: 300;
+		}
+
+		@include element("ribbon-favorite") {
+			position: absolute;
+			top: 10px;
+			left: -4px;
+			color: var(--primary-color);
+			background-color: currentColor;
+			font-size: 1.2rem;
+			font-weight: 500;
+			display: flex;
+			align-items: center;
+			padding: 0 4px;
+			border-top-right-radius: 2px;
+			border-bottom-right-radius: 2px;
+
+			&::after {
+				content: "";
+				position: absolute;
+				bottom: -3px;
+				left: 0;
+				border-top: 3px solid currentColor;
+				border-left: 3px solid transparent;
+				filter: brightness(60%);
+			}
+
+			i {
+				color: var(--white-color);
+				font-size: 0.9rem;
+				margin-right: 4px ;
+			}
+
+			span {
+				color: var(--white-color);
+			}
 		}
 	}
 }
