--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -989,13 +989,25 @@
 	}
 
 	.product {
-
+		margin-bottom: 10px;
 	}
 
 	.product-item {
+		display: block;
+		text-decoration: none;
 		position: relative;
 		margin-top: 10px;
 		background-color: var(--white-color);
+		border-bottom-left-radius: 2px;
+		border-bottom-right-radius: 2px;
+		box-shadow: 0 0.1rem 0.125rem 0 rgba(0, 0, 0, .1);
+		transition: transform linear 0.1s;
+		will-change: transform;
+
+		&:hover {
+			transform: translateY(-1px);
+			box-shadow: 0 0.1rem 2rem 0 rgba(0, 0, 0, 0.05);
+		}
 
 		@include element("img") {
 			background-repeat: no-repeat;
@@ -1095,6 +1107,7 @@
 			color: #595959;
 			font-size: 1.2rem;
 			font-weight: 300;
+			padding-bottom: 10px;
 		}
 
 		@include element("ribbon-favorite") {
