--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -205,6 +205,7 @@ html {
       -ms-flex-align: center;
           align-items: center;
   position: relative;
+  z-index: 1;
 }
 
 .select-input:hover .select-input__list {
@@ -460,6 +461,8 @@ html {
   display: none;
   width: 190px;
   background-color: var(--white-color);
+  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
   position: absolute;
   top: 150%;
   left: 0;
@@ -467,6 +470,7 @@ html {
   border-radius: 4px;
   -webkit-animation: fadeIn ease-in 0.5s;
           animation: fadeIn ease-in 0.5s;
+  z-index: 1;
 }
 
 .header__qr::before {
@@ -510,7 +514,7 @@ html {
   position: absolute;
   top: 100%;
   right: 0;
-  margin-top: 20px;
+  margin-top: 8px;
   background-color: var(--white-color);
   width: 404px;
   -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
@@ -525,12 +529,12 @@ html {
 
 .header__notification::before {
   content: "";
-  border-bottom: 20px;
-  border-left: 20px;
-  border-right: 20px;
+  border-bottom: 15px;
+  border-left: 15px;
+  border-right: 15px;
   border-style: solid;
   position: absolute;
-  top: -20px;
+  top: -16px;
   right: 5%;
   border-color: transparent transparent var(--white-color);
 }
@@ -538,10 +542,10 @@ html {
 .header__notification::after {
   content: "";
   position: absolute;
-  top: -22px;
+  top: -18px;
   right: 0;
   width: 90px;
-  height: 25px;
+  height: 20px;
 }
 
 @-webkit-keyframes headerNotificationShow {
@@ -700,6 +704,7 @@ html {
   border-radius: 2px;
   -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
           box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
 .header__search-history-heading {
@@ -894,13 +899,14 @@ html {
           box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
   -webkit-animation: fadeIn ease-in 0.5s;
           animation: fadeIn ease-in 0.5s;
+  z-index: 1;
 }
 
 .header__cart-list::before {
   content: "";
   position: absolute;
   top: -33px;
-  right: 14px;
+  right: 15px;
   border-width: 18px 20px;
   border-style: solid;
   border-color: transparent transparent #fff transparent;
@@ -946,6 +952,8 @@ html {
   padding-left: 0;
   list-style: none;
   margin: 12px 0;
+  max-height: 56vh;
+  overflow-y: auto;
 }
 
 .header__cart-item {
@@ -987,8 +995,19 @@ html {
 
 .header__cart-item-name {
   font-size: 1.4rem;
+  line-height: 2rem;
+  max-height: 4rem;
+  overflow: hidden;
   font-weight: 400;
   margin: 0;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  text-align: left;
+  padding-right: 12px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 
 .header__cart-item-price {
@@ -1197,7 +1216,7 @@ html {
   color: var(--text-color);
   margin: 0;
   font-size: 1.6rem;
-  padding: 16px;
+  padding: 10px 22px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
@@ -1208,9 +1227,21 @@ html {
 
 .homepage .category-list {
   padding-left: 0;
-  padding-bottom: 8px;
   list-style: none;
-  margin: 12px 0 12px 12px;
+  margin: 0;
+}
+
+.homepage .category-list-item {
+  position: relative;
+}
+
+.homepage .category-list-item:not(:first-child)::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 22px;
+  right: 22px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .homepage .category-list-item__link {
@@ -1220,7 +1251,7 @@ html {
   font-size: 1.4rem;
   color: var(--text-color);
   text-decoration: none;
-  padding: 8px 32px 8px 22px;
+  padding: 10px 22px;
   -webkit-transition: right linear .1s;
   transition: right linear .1s;
 }
@@ -1237,7 +1268,7 @@ html {
 .homepage .category-list-item--active .category-list-item__link::before {
   position: absolute;
   top: 50%;
-  left: 5px;
+  left: 10px;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   content: '';
@@ -1338,8 +1369,7 @@ html {
   position: relative;
   margin-top: 10px;
   background-color: var(--white-color);
-  border-bottom-left-radius: 2px;
-  border-bottom-right-radius: 2px;
+  border-radius: 2px;
   -webkit-box-shadow: 0 0.1rem 0.125rem 0 rgba(0, 0, 0, 0.1);
           box-shadow: 0 0.1rem 0.125rem 0 rgba(0, 0, 0, 0.1);
   -webkit-transition: -webkit-transform linear 0.1s;
@@ -1359,7 +1389,9 @@ html {
 .homepage .product-item__img {
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position: top center;
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
   padding-top: 100%;
 }
 
@@ -1511,6 +1543,7 @@ html {
   width: 40px;
   background-color: rgba(255, 216, 64, 0.8);
   text-align: center;
+  border-top-right-radius: 2px;
 }
 
 .homepage .product-item__ribbon-sale-off::after {
