--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -186,6 +186,7 @@ html {
 	justify-content: space-between;
 	align-items: center;
 	position: relative;
+	z-index: 1;
 
 	&:hover {
 		.select-input__list {
