--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -255,6 +255,45 @@ html {
   color: var(--primary-color);
 }
 
+.pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0;
+}
+
+.pagination-item {
+  margin: 0 8px;
+  font-size: 1.6rem;
+  list-style: none;
+}
+
+.pagination-item__link {
+  display: inline-block;
+  border-radius: 2px;
+  color: #939393;
+  text-decoration: none;
+  min-width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+}
+
+.pagination-item--active .pagination-item__link {
+  color: var(--white-color);
+  background-color: var(--primary-color);
+}
+
+.pagination-item--active .pagination-item__link:hover {
+  opacity: 0.8;
+}
+
 .header {
   height: var(--header-height);
   background-image: -webkit-gradient(linear, left top, left bottom, from(0), color-stop(#fe6433), to(#f53e2d));
@@ -1361,6 +1400,10 @@ html {
 
 .homepage .product {
   margin-bottom: 10px;
+}
+
+.homepage .product__pagination {
+  margin: 30px 0;
 }
 
 .homepage .product-item {
