--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1439,6 +1439,7 @@ html {
 }
 
 .homepage .product-item__name {
+  color: var(--text-color);
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
@@ -1607,5 +1608,84 @@ html {
 
 .homepage .product-item__sale-off-label {
   color: var(--white-color);
+  font-size: 1.2rem;
+}
+
+.footer {
+  border-top: 4px solid var(--primary-color);
+  padding-top: 12px;
+}
+
+.footer__heading {
+  font-size: 1.3rem;
+  text-transform: uppercase;
+}
+
+.footer__list {
+  padding-left: 0;
+  list-style: none;
+}
+
+.footer__list-item-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  font-size: 1.4rem;
+  color: #737373;
+  padding: 4px 0;
+}
+
+.footer__list-item-link:hover {
+  color: var(--primary-color);
+}
+
+.footer__list-item-icon {
+  font-size: 1.7rem;
+  margin-right: 6px;
+}
+
+.footer__download {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer__qr-img {
+  width: 80px;
+}
+
+.footer__download-apps {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.footer__download-app-link {
+  text-decoration: none;
+  color: transparent;
+}
+
+.footer__download-app-img {
+  height: 20px;
+  margin-left: 6px;
+}
+
+.footer__copyright {
+  color: #737373;
+  background-color: #f5f5f5;
+  text-align: center;
+  margin: 12px 0 0 0;
+  padding: 10px;
   font-size: 1.2rem;
 }
