--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1046,6 +1046,7 @@
 		}
 
 		@include element("name") {
+			color: var(--text-color);
 			display: -webkit-box;
 			-webkit-box-orient: vertical;
 			-webkit-line-clamp: 2;
@@ -1207,3 +1208,71 @@
 	}
 }
 // End: Homepage
+
+// Begin: Footer
+.footer {
+	border-top: 4px solid var(--primary-color);
+	padding-top: 12px;
+
+	@include element("heading") {
+		font-size: 1.3rem;
+		text-transform: uppercase;
+	}
+
+	@include element("list") {
+		padding-left: 0;
+		list-style: none;
+	}
+
+	@include element("list-item-link") {
+		display: flex;
+		align-items: center;
+		text-decoration: none;
+		font-size: 1.4rem;
+		color: #737373;
+		padding: 4px 0;
+
+		&:hover {
+			color: var(--primary-color);
+		}
+	}
+
+	@include element("list-item-icon") {
+		font-size: 1.7rem;
+		margin-right: 6px;
+	}
+
+	@include element("download") {
+		display: flex;
+	}
+
+	@include element("qr-img") {
+		width: 80px;
+	}
+
+	@include element("download-apps") {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+	}
+
+	@include element("download-app-link") {
+		text-decoration: none;
+		color: transparent;
+	}
+
+	@include element("download-app-img") {
+		height: 20px;
+		margin-left: 6px;
+	}
+
+	@include element("copyright") {
+		color: #737373;
+		background-color: #f5f5f5;
+		text-align: center;
+		margin: 12px 0 0 0;
+		padding: 10px;
+		font-size: 1.2rem;
+	}
+}
+// End: Footer
