--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,7 @@
   --header-with-search-height: calc(
 		var(--header-height) - var(--navbar-height)
 	);
+  --header-sort-bar-height: 46px;
 }
 
 * {
@@ -1087,6 +1088,51 @@ html {
 
 .header__cart-view:hover {
   background-color: #f05d51;
+}
+
+.header__sort-bar {
+  display: none;
+  position: fixed;
+  top: var(--header-height);
+  left: 0;
+  right: 0;
+  height: var(--header-sort-bar-height);
+  background-color: var(--white-color);
+  border-top: 1px solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.header__sort-item {
+  list-style: none;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  position: relative;
+}
+
+.header__sort-item:not(:first-child)::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  left: 0;
+  height: 60%;
+  border-left: 1px solid #e5e5e5;
+}
+
+.header__sort-item-link {
+  font-size: 14px;
+  text-decoration: none;
+  text-align: center;
+  color: var(--text-color);
+  height: 100%;
+  display: block;
+  line-height: var(--header-sort-bar-height);
+}
+
+.header__sort-item-link--active {
+  color: var(--primary-color);
 }
 
 .auth-form {
