--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,1 +1,54 @@
-/* No CSS */
+@media (max-width: 1023px) {
+  :root {
+    --header-height: 68px;
+    --navbar-height: 0px;
+  }
+  .hide-on-mobile-tablet {
+    display: none !important;
+  }
+  .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+  }
+  .header__cart-list {
+    position: fixed;
+    top: var(--header-height);
+    right: 0;
+    width: 100%;
+    padding: 0 calc((100% - 644px) / 2);
+  }
+  .header__cart-list::before {
+    right: 154px;
+    border-color: transparent;
+  }
+  .header__sort-bar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .homepage {
+    margin-top: calc(var(--header-height) + var(--header-sort-bar-height));
+  }
+}
+
+@media (min-width: 740px) and (max-width: 1023px) {
+  .hide-on-tablet {
+    display: none !important;
+  }
+  .header__cart {
+    width: 88px;
+    text-align: right;
+  }
+  .header-with-search {
+    margin: 0;
+  }
+}
+
+@media (max-width: 739px) {
+  .hide-on-mobile {
+    display: none !important;
+  }
+}
