--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -15,6 +15,7 @@
 	--header-with-search-height: calc(
 		var(--header-height) - var(--navbar-height)
 	);
+	--header-sort-bar-height: 46px;
 }
 
 * {
