--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -676,6 +676,8 @@ html {
 }
 
 .header__logo-link {
+  display: block;
+  line-height: 0;
   color: transparent;
   text-decoration: none;
 }
@@ -697,6 +699,21 @@ html {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+}
+
+.header__mobile-search {
+  padding: 0 8px;
+}
+
+.header__mobile-search-icon {
+  font-size: 2.2rem;
+  color: var(--white-color);
+}
+
+.header__search-checkbox:checked ~ .header__search {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .header__search-select {
