--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -51,4 +51,55 @@
   .hide-on-mobile {
     display: none !important;
   }
+  .header-with-search {
+    margin: 0px 20px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .header__logo {
+    width: unset;
+  }
+  .header__cart {
+    width: unset;
+  }
+  .header__search {
+    -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    top: var(--header-height);
+    left: 0;
+    right: 0;
+    height: 46px;
+    padding: 0 16px;
+    z-index: 1;
+    -webkit-animation: mobileSearchFadeIn linear 0.3s;
+            animation: mobileSearchFadeIn linear 0.3s;
+    display: none;
+  }
+  .header__search-history {
+    position: fixed;
+    top: calc(var(--header-height) + var(--header-sort-bar-height));
+    width: 100%;
+  }
+  @-webkit-keyframes mobileSearchFadeIn {
+    from {
+      opacity: 0;
+      top: calc(var(--header-height) / 2);
+    }
+    to {
+      opacity: 1;
+      top: var(--header-height);
+    }
+  }
+  @keyframes mobileSearchFadeIn {
+    from {
+      opacity: 0;
+      top: calc(var(--header-height) / 2);
+    }
+    to {
+      opacity: 1;
+      top: var(--header-height);
+    }
+  }
 }
