--- a/assets/sass/responsive.scss
+++ b/assets/sass/responsive.scss
@@ -62,4 +62,50 @@
     .hide-on-mobile {
         display: none !important;
     }
+
+    .header-with-search {
+        margin: 0px 20px;
+        justify-content: space-between;
+    }
+
+    .header {
+        &__logo {
+            width: unset;    
+        }
+
+        &__cart {
+            width: unset;    
+        }
+
+        &__search {
+            box-shadow: 0 0 8px rgba(0, 0, 0, .2);
+            position: fixed;
+            top: var(--header-height);
+            left: 0;
+            right: 0;
+            height: 46px;
+            padding: 0 16px;
+            z-index: 1;
+            animation: mobileSearchFadeIn linear 0.3s;
+            display: none;
+        }
+
+        &__search-history {
+            position: fixed;
+            top: calc(var(--header-height) + var(--header-sort-bar-height));
+            width: 100%; 
+        }
+
+        @keyframes mobileSearchFadeIn {
+            from {
+                opacity: 0;
+                top: calc(var(--header-height) / 2);
+            }
+
+            to {
+                opacity: 1;
+                top: var(--header-height);
+            }
+        }
+    }
 }
