--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -31,6 +31,7 @@
   }
   .homepage {
     margin-top: calc(var(--header-height) + var(--header-sort-bar-height));
+    padding-top: 10px;
   }
 }
 
@@ -48,6 +49,9 @@
 }
 
 @media (max-width: 739px) {
+  .homepage .row.sm-gutter {
+    margin: 0;
+  }
   .hide-on-mobile {
     display: none !important;
   }
@@ -101,5 +105,13 @@
       opacity: 1;
       top: var(--header-height);
     }
+  }
+  .pagination-item {
+    font-size: 1.4rem;
+  }
+  .pagination-item__link {
+    min-width: 18px;
+    height: 24px;
+    line-height: 24px;
   }
 }
