--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,5 +1,8 @@
 // header
 @import "base";
+.app {
+	overflow: hidden;
+}
 
 .header {
 	height: var(--header-height);
@@ -592,6 +595,7 @@
 		display: inline-block;
 		padding: 0 8px;
 		cursor: pointer;
+		-webkit-tap-highlight-color: transparent;
 	}
 
 	@include element("cart-quantity") {
@@ -1001,6 +1005,58 @@
 					border-color: transparent transparent transparent var(--primary-color);
 				}
 			}
+		}
+	}
+
+	.mobile-category {
+		@include element("list") {
+			display: flex;
+			max-width: 100%;
+			overflow-x: auto;
+
+			&::-webkit-scrollbar {
+				display: none;
+			}
+		}
+
+		@include element("item") {
+			list-style: none;
+			flex-shrink: 0;
+
+			&:not(:last-child) {
+				margin-right: 10px;
+			}
+
+			&:nth-of-type(3n + 1) .mobile-category__link {
+				background-color: #87afd8;
+			}
+
+			&:nth-of-type(3n + 2) .mobile-category__link {
+				background-color: #76c9bd;
+			}
+
+			&:nth-of-type(3n + 3) .mobile-category__link {
+				background-color: #88cf81;
+			}
+		}
+
+		@include element("link") {
+			display: block;
+			width: 110px;
+			height: 4rem;
+			text-decoration: none;
+			color: var(--white-color);
+			text-align: center;
+			border-radius: 2px;
+			font-size: 1.4rem;
+			line-height: 2rem;
+			overflow: hidden;
+			display: -webkit-box;
+			-webkit-box-orient: vertical;
+			-webkit-line-clamp: 2;
+			user-select: none;
+			-webkit-user-select: none;
+			-webkit-tap-highlight-color: transparent;
 		}
 	}
 
