--- a/assets/sass/responsive.scss
+++ b/assets/sass/responsive.scss
@@ -36,6 +36,7 @@
 
     .homepage {
         margin-top: calc(var(--header-height) + var(--header-sort-bar-height));
+        padding-top: 10px;
     }
 }
 
@@ -59,6 +60,12 @@
 
 // Mobile
 @media (max-width: 739px) {
+    .homepage {
+        .row.sm-gutter {
+            margin: 0;
+        }
+    }
+
     .hide-on-mobile {
         display: none !important;
     }
@@ -106,6 +113,16 @@
                 opacity: 1;
                 top: var(--header-height);
             }
+        }
+    }
+
+    .pagination-item {
+        font-size: 1.4rem;
+
+        &__link {
+            min-width: 18px;
+            height: 24px;
+            line-height: 24px;
         }
     }
 }
