--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -678,6 +678,7 @@ html {
 }
 
 .header__mobile-search {
+  display: none;
   padding: 0 8px;
 }
 
@@ -1345,6 +1346,10 @@ html {
   border-color: transparent transparent transparent var(--primary-color);
 }
 
+.homepage .mobile-category {
+  display: none;
+}
+
 .homepage .mobile-category__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1381,14 +1386,15 @@ html {
 
 .homepage .mobile-category__link {
   display: block;
-  width: 110px;
-  height: 4rem;
+  width: 115px;
+  height: calc((2rem + 10px) * 2);
+  padding: 5px 8px;
   text-decoration: none;
   color: var(--white-color);
   text-align: center;
   border-radius: 2px;
   font-size: 1.4rem;
-  line-height: 2rem;
+  line-height: calc(2rem + 5px);
   overflow: hidden;
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -1702,6 +1708,7 @@ html {
 }
 
 .footer__heading {
+  margin-top: 12px;
   font-size: 1.3rem;
   text-transform: uppercase;
 }
@@ -1770,7 +1777,7 @@ html {
   color: #737373;
   background-color: #f5f5f5;
   text-align: center;
-  margin: 12px 0 0 0;
+  margin: 24px 0 0 0;
   padding: 10px;
   font-size: 1.2rem;
 }
