--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -381,6 +381,7 @@
 	}
 
 	@include element("mobile-search") {
+		display: none;
 		padding: 0 8px;
 	}
 
@@ -1009,6 +1010,8 @@
 	}
 
 	.mobile-category {
+		display: none;
+
 		@include element("list") {
 			display: flex;
 			max-width: 100%;
@@ -1042,14 +1045,15 @@
 
 		@include element("link") {
 			display: block;
-			width: 110px;
-			height: 4rem;
+			width: 115px;
+			height: calc((2rem + 10px) * 2);
+			padding: 5px 8px;
 			text-decoration: none;
 			color: var(--white-color);
 			text-align: center;
 			border-radius: 2px;
 			font-size: 1.4rem;
-			line-height: 2rem;
+			line-height: calc(2rem + 5px);
 			overflow: hidden;
 			display: -webkit-box;
 			-webkit-box-orient: vertical;
@@ -1332,6 +1336,7 @@
 	padding-top: 12px;
 
 	@include element("heading") {
+		margin-top: 12px;
 		font-size: 1.3rem;
 		text-transform: uppercase;
 	}
@@ -1387,7 +1392,7 @@
 		color: #737373;
 		background-color: #f5f5f5;
 		text-align: center;
-		margin: 12px 0 0 0;
+		margin: 24px 0 0 0;
 		padding: 10px;
 		font-size: 1.2rem;
 	}
