--- a/assets/sass/responsive.scss
+++ b/assets/sass/responsive.scss
@@ -37,6 +37,10 @@
     .homepage {
         margin-top: calc(var(--header-height) + var(--header-sort-bar-height));
         padding-top: 10px;
+
+        .mobile-category {
+            display: block;
+        }
     }
 }
 
@@ -60,7 +64,7 @@
 
 // Mobile
 @media (max-width: 739px) {
-    .homepage {
+    .homepage, .footer {
         .row.sm-gutter {
             margin: 0;
         }
@@ -78,6 +82,10 @@
     .header {
         &__logo {
             width: unset;    
+        }
+
+        &__logo-img {
+            width: 120px;    
         }
 
         &__cart {
@@ -103,6 +111,10 @@
             width: 100%; 
         }
 
+        &__mobile-search {
+            display: block;
+        }
+
         @keyframes mobileSearchFadeIn {
             from {
                 opacity: 0;
@@ -113,6 +125,16 @@
                 opacity: 1;
                 top: var(--header-height);
             }
+        }
+    }
+
+    .footer {
+        &__heading {
+            text-align: center;
+        }
+
+        &__list-item-link, &__download {
+            justify-content: center;
         }
     }
 
